@@ -1,12 +1,14 @@
 #autoload
 
-local expl ret=1 list disp
+local expl ret=1 list disp sep
 
 if (( $+commands[lsallq] )); then
   # Use AIX's command to list print queues
   _wanted printers expl printer compadd $(lsallq)
   return
 fi
+
+zstyle -s ":completion:${curcontext}:printers" list-separator sep || sep=--
 
 if (( ! $+_lp_cache )); then
   local file entry names i
@@ -42,7 +44,7 @@ if (( ! $+_lp_cache )); then
 fi
 
 if zstyle -T ":completion:${curcontext}:printers" verbose; then
-  zformat -a list ' -- ' "$_lp_cache[@]"
+  zformat -a list " $sep " "$_lp_cache[@]"
   disp=(-ld list)
 else
   disp=()
@@ -53,7 +55,7 @@ _wanted printers expl printer \
 (( $+_lp_alias_cache )) || return 1
 
 if zstyle -T ":completion:${curcontext}:printers" verbose; then
-  zformat -a list ' -- ' "$_lp_alias_cache[@]"
+  zformat -a list " $sep " "$_lp_alias_cache[@]"
   disp=(-ld list)
 else
   disp=()
